--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-table": "latest",
+    "@types/uuid": "^10.0.0",
     "apify-client": "^2.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "2.30.0",
     "embla-carousel-react": "8.5.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^129.0.0",
@@ -53,15 +54,16 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "openai": "^4.86.1",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.2.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "latest"
   },
