--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-table": "latest",
     "@types/uuid": "^10.0.0",
     "apify-client": "^2.12.0",
